@startuml
title Figure 6(b). Tenant and Membership Domain Classes
top to bottom direction

skinparam monochrome true
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 16
skinparam ArrowFontSize 14
skinparam TitleFontSize 18
skinparam shadowing false

class User {
  id: UUID
  email: string
}

class Organization {
  id: UUID
  name: string
  parentId: UUID?
  rootOrganizationId: UUID
  joinBonusPoints: integer
  status: string
}

class OrganizationMembership {
  role: string
  status: string
  joinedAt: timestamp
  approvedBy: UUID?
}

class OrganizationEmailDomain {
  domain: string
  autoJoin: boolean
}

class OrganizationEmailAllowlist {
  email: string
  usedAt: timestamp?
}

Organization "0..1 parent" <-- "0..* children" Organization : hierarchy

User "1" -- "0..*" OrganizationMembership
Organization "1" -- "0..*" OrganizationMembership
Organization "1" -- "0..*" OrganizationEmailDomain
Organization "1" -- "0..*" OrganizationEmailAllowlist

User -[hidden]right- Organization
OrganizationEmailDomain -[hidden]right- OrganizationEmailAllowlist
@enduml
